--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -10,8 +10,8 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #283a8a;
-  --global-hover-color: #283a8a;
+  --global-theme-color: #045dd1;
+  --global-hover-color: #045dd1;
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
