--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -10,6 +10,12 @@ layout: default
   <!-- Page/Post style -->
   <style type="text/css">
     {{ page._styles }}
+        img {
+          max-width: 100%;
+          height: auto;
+          display: block;
+          margin: 0 auto;
+        }
   </style>
 {% endif %}
 
