--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -57,11 +57,11 @@ layout: default
     {% endif %}
 
     <!-- Current projects -->
-    {% if page.selected_projects %}
+    {% if page.projects %}
       <h2>
         <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects</a>
       </h2>
-      {% include selected_projectss.liquid %}
+      {% include projects.liquid %}
     {% endif %}
 
     <!-- Selected papers -->
