--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -43,7 +43,7 @@ layout: default
     <!-- News -->
     {% if page.announcements and page.announcements.enabled %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">News <small>(eee all)</small></a>
+        News <a href="{{ '/news/' | relative_url }}" style="color: inherit"><small>(see all)</small></a>
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
@@ -59,7 +59,7 @@ layout: default
     <!-- Current projects -->
     {% if page.projects %}
       <h2>
-        <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects <small>(eee all)</small></a>
+        <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects <small>(see all)</small></a>
       </h2>
       {% include projects.liquid %}
     {% endif %}
@@ -67,7 +67,7 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected Publications <small>(eee all)</small></a>
+        Selected Pulbications <a href="{{ '/publications/' | relative_url }}" style="color: inherit"><small>(see all)</small></a>
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
