--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,9 +42,8 @@ layout: default
 
     <!-- News -->
     {% if page.announcements and page.announcements.enabled %}
-      <h2>
-        News <a href="{{ '/news/' | relative_url }}" style="color: inherit"><small>(see all)</small></a>
-      </h2>
+    <h2>News</h2>
+    <small><a href="{{ '/news/' | relative_url }}" style="font-weight: normal;">(see all)</a></small>
       {% include news.liquid limit=true %}
     {% endif %}
 
@@ -57,6 +56,7 @@ layout: default
     {% endif %}
 
     <!-- Current projects -->
+    {{ page.projects | inspect }}
     {% if page.projects %}
       <h2>
         <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects <small>(see all)</small></a>
@@ -66,9 +66,8 @@ layout: default
 
     <!-- Selected papers -->
     {% if page.selected_papers %}
-      <h2>
-        Selected Pulbications <a href="{{ '/publications/' | relative_url }}" style="color: inherit"><small>(see all)</small></a>
-      </h2>
+    <h2>Selected Publications</h2>
+    <small><a href="{{ '/publications/' | relative_url }}" style="font-weight: normal;">(see all)</a></small>
       {% include selected_papers.liquid %}
     {% endif %}
 
