--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -56,18 +56,17 @@ layout: default
     {% endif %}
 
     <!-- Current projects -->
-    {{ page.projects | inspect }}
-    {% if page.projects %}
-      <h2>
-        <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects <small>(see all)</small></a>
-      </h2>
+    <h2>
+      <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects <small>(see all)</small></a>
+    </h2>
       {% include projects.liquid %}
-    {% endif %}
 
     <!-- Selected papers -->
     {% if page.selected_papers %}
-    <h2>Selected Publications</h2>
-    <small><a href="{{ '/publications/' | relative_url }}" style="font-weight: normal;">(see all)</a></small>
+    <h2>
+      Selected Publications 
+      <a href="{{ '/publications/' | relative_url }}" style="font-size: 0.6em; font-weight: normal; color: inherit;">(see all)</a>
+    </h2>
       {% include selected_papers.liquid %}
     {% endif %}
 
