--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,8 +42,10 @@ layout: default
 
     <!-- News -->
     {% if page.announcements and page.announcements.enabled %}
-    <h2>News</h2>
-    <small><a href="{{ '/news/' | relative_url }}" style="font-weight: normal;">(see all)</a></small>
+    <h2>
+      News
+      <a href="{{ '/news/' | relative_url }}" style="font-size: 0.6em; font-weight: normal; color: inherit;">(see all)</a>
+    </h2>
       {% include news.liquid limit=true %}
     {% endif %}
 
@@ -56,11 +58,15 @@ layout: default
     {% endif %}
 
     <!-- Current projects -->
-    <h2>
-      <a href="{{ '/projects/' | relative_url }}" style="color: inherit">Current Projects <small>(see all)</small></a>
-    </h2>
+    {% if page.projects %}
+      <h2>
+        <a href="{{ '/projects/' | relative_url }}" style="color: inherit">
+          Current Projects <small style="font-size: 0.6em; font-weight: normal;">(see all)</small>
+        </a>
+      </h2>
       {% include projects.liquid %}
-
+    {% endif %}
+    
     <!-- Selected papers -->
     {% if page.selected_papers %}
     <h2>
