--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -24,7 +24,7 @@
         <!-- Social Icons -->
         <div class="navbar-brand social">{% include social.liquid %}</div>
       {% endif %}
-      <!-- Navbar Toggle -->
+      <!-- Navbar Toggle 
       <button
         class="navbar-toggler collapsed ml-auto"
         type="button"
@@ -39,6 +39,7 @@
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
       </button>
+-->
 
       <div class="collapse navbar-collapse text-right" id="navbarNav">
         <ul class="navbar-nav ml-auto flex-nowrap">
