--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -38,8 +38,8 @@
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
-      </button>
-      -->
+      </button>-->
+      
 
       <div class="collapse navbar-collapse text-right" id="navbarNav">
         <ul class="navbar-nav ml-auto flex-nowrap">
