--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -24,7 +24,7 @@
         <!-- Social Icons -->
         <div class="navbar-brand social">{% include social.liquid %}</div>
       {% endif %}
-      <!-- Navbar Toggle 
+      <!-- Navbar Toggle -->
       <button
         class="navbar-toggler collapsed ml-auto"
         type="button"
@@ -38,7 +38,7 @@
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
-      </button>-->
+      </button>
       
 
       <div class="collapse navbar-collapse text-right" id="navbarNav">
@@ -127,7 +127,7 @@
             </li>
           {% endif %}
           {% if site.enable_darkmode %}
-            <!-- Toogle theme mode -->
+            <!-- Toogle theme mode 
             <li class="toggle-container">
               <button id="light-toggle" title="Change theme">
                 <i class="ti ti-sun-moon" id="light-toggle-system"></i>
@@ -139,7 +139,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
   {% if site.enable_progressbar %}
     <!-- Scrolling Progress Bar -->
     <progress id="progress" value="0">
