--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -134,12 +134,12 @@
                 <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
                 <i class="ti ti-sun-filled" id="light-toggle-light"></i>
               </button>
-            </li>
+            </li> -->
           {% endif %}
         </ul>
       </div>
     </div>
-  </nav> -->
+  </nav>
   {% if site.enable_progressbar %}
     <!-- Scrolling Progress Bar -->
     <progress id="progress" value="0">
