--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -199,6 +199,8 @@ ul.task-list input[type="checkbox"] {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
+    font-size: 0.875rem;
+    line-height: 1.2;
 
     p {
       display: inline-block;
@@ -208,7 +210,7 @@ ul.task-list input[type="checkbox"] {
 }
 
 .profile.float-right {
-  margin-left: 1rem;
+  margin-left: 2rem;
 }
 
 .profile.float-left {
