--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1419,3 +1419,12 @@ figure.cover {
     color: #23212d !important;
   }
 }
+
+
+/* Consistent width for sections on the About page */
+.layout-about .home-section {
+  max-width: 900px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
