--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -198,9 +198,9 @@ ul.task-list input[type="checkbox"] {
   .more-info {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 0.875rem;
-    line-height: 1.2;
+    line-height: 1.3;
 
     p {
       display: inline-block;
