--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -198,8 +198,8 @@ ul.task-list input[type="checkbox"] {
   .more-info {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 0.875rem;
+    font-family: Calibri, sans-serif;
+    font-size: 1rem;
     line-height: 1.3;
 
     p {
